<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="StateTraceItem" Id="{a2deb8d2-d797-454f-8fa8-dd09006a7bef}">
    <Declaration><![CDATA[TYPE StateTraceItem :
STRUCT
	iPretender		: Tags.I_Tag;
	iCurrent		: Tags.I_Tag;
	iPrevious		: Tags.I_Tag;
	bSuccess		: BOOL;
	nTimestamp		: ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>